--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "demo",
     "version": "1.0.0", 
-    "description": "", 
+    "description": "express", 
     "main": "index.js", 
     "scripts": { "test": "echo \"Error: no test specified\" && exit 1", "start" : "node index.js" 
     }, 
